Fix : the clock was behind the map

--- a/style.css
+++ b/style.css
@@ -275,6 +275,7 @@ details-component{
     align-items: center;
     justify-content: center;
     padding: 30px;
+    z-index: 1;
 }
 
 .map{
@@ -330,6 +331,7 @@ details-component{
     position: absolute;
     top: 50px;
     right: 100px; 
+    z-index: 10;
     
     transform: translateX(50%); 
 }
